# wx_hello

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
core/: my_app.cpp  my_app.h  my_frame.cpp  my_frame.h  wx_inc.h
