cmake_minimum_required(VERSION 3.10)
project(wx_hello VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
#set(wxBUILD_SHARED OFF)

add_subdirectory(deps/wxwidget)
set(appSourceList main.cpp core/my_frame.cpp core/my_app.cpp)
if (WIN32)
    add_executable(${PROJECT_NAME} WIN32 "${appSourceList}")
else ()
    add_executable(${PROJECT_NAME} "${appSourceList}")
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-Wl,-rpath,./lib")
endif ()
target_link_libraries(${PROJECT_NAME} wx::net wx::core wx::base)
